# Utility

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: setup.cmake
include/utility/: arch.hpp  bit_helper.hpp  comparison.hpp  debug.hpp  pimpl.hpp  types.hpp
lib/: CMakeLists.txt  config.hpp.in
lib/examples/: CMakeLists.txt
lib/include/Template/: example.hpp
lib/src/: CMakeLists.txt  example.cpp
lib/tests/: CMakeLists.txt  first.cpp
