cmake_minimum_required(VERSION 3.13)

project(Utility VERSION 0.0.1)

string(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWER)

add_library(${PROJECT_NAME} INTERFACE)
target_include_directories(${PROJECT_NAME}
	INTERFACE
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
		$<INSTALL_INTERFACE:include/${PROJECT_NAME_LOWER}>
)
add_library(${CMAKE_PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})

